fix errors re aligned to right

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,9 @@ body {
   position: sticky;
   left: 0;
   background-color: #222;
+}
+
+.alignRight {
   text-align: right;
 }
 
